finished encapsulating wrapper